added api to get a list of all courses and updated swagger.json to include this route
